--- a/lucocina/wp-content/themes/understrap/css/lucocina.css
+++ b/lucocina/wp-content/themes/understrap/css/lucocina.css
@@ -64,6 +64,21 @@ h3 {
     transition: all 0.3s ease-in;
 }
 
+.btn-transparent {
+    background: none;
+    color: var(--bs-white);
+    border: 1px solid var(--bs-gold);
+    transition: all 0.3s ease-in;
+}
+
+.btn-transparent:hover {
+  background: var(--bs-white);
+  color: var(--bs-gold);
+  border: 1px solid var(--bs-gold);
+  transition: all 0.3s ease-in;
+  opacity: 1;
+}
+
 .btn-gold:hover {
     background: var(--bs-white);
     color: var(--bs-gold);
@@ -73,6 +88,10 @@ h3 {
 
 .green-background {
     background-color: var(--bs-green);
+}
+
+.gold-background {
+    background: var(--bs-gold);
 }
 
 .e-con-inner {
@@ -170,20 +189,24 @@ h3 {
     position: absolute;
     top: 0px;
     left: 50%;
-    transform: translateX(-50%);
+    /*transform: translateX(-50%);*/
     opacity: 1;
     -moz-transition: all 1s ease-in-out !important;
     -o-transition: all 1s ease-in-out !important;
     -webkit-transition: all 1s ease-in-out !important;
     transition: all 1s ease-in-out !important;
-    max-width: 120px;
+    z-index: 1000;
+  }
+  #wrapper-navbar #main-nav .navbar-brand .logo:hover{
+    transform: rotateX(360deg);
+    transition: all 1s ease-in;
   }
   #wrapper-navbar #main-nav .navbar-brand .logo-text {
     opacity: 1;
-    -moz-transition: all 0s ease-in-out !important;
+    /*-moz-transition: all 0s ease-in-out !important;
     -o-transition: all 0s ease-in-out !important;
     -webkit-transition: all 0s ease-in-out !important;
-    transition: all 0s ease-in-out !important;
+    transition: all 0s ease-in-out !important;*/
   }
   #wrapper-navbar #main-nav #openNav {
     -moz-transition: all 0.5s ease !important;
@@ -214,13 +237,12 @@ h3 {
     margin: 0px;
   }
   #wrapper-navbar.transparent #main-nav .navbar-brand .logo {
-    z-index: 1000;
     opacity: 1;
-    -moz-transition: all 0s ease-in-out !important;
+    /*-moz-transition: all 0s ease-in-out !important;
     -o-transition: all 0s ease-in-out !important;
     -webkit-transition: all 0s ease-in-out !important;
     transition: all 0s ease-in-out !important;
-    max-width: inherit;
+    max-width: inherit;*/
   }
   #wrapper-navbar.transparent #main-nav .navbar-brand .logo-text {
     opacity: 1;
@@ -252,6 +274,10 @@ h3 {
     margin-left: 1.5rem;
   }
 
+  #wrapper-navbar .button-block a.btn:hover {
+    border: 1px solid var(--bs-gold);
+  }
+
   /* -- Menú hamburguesa desplegado -- */
   #wrapper-navbar.transparent .overlay .closebtn {
     top: 38px;
@@ -261,7 +287,10 @@ h3 {
     background: var(--bs-blue);
   }
   #wrapper-navbar .overlay a {
+    font-size: 50px;
+    font-weight: 400;
     color: var(--bs-white);
+    text-transform: uppercase;
   }
   #wrapper-navbar .overlay a:hover {
     color: var(--bs-gold);
@@ -269,9 +298,9 @@ h3 {
   #wrapper-navbar .overlay .closebtn {
     left: 50px;
   }
-  #wrapper-navbar .overlay .overlay-content {
+  /*#wrapper-navbar .overlay .overlay-content {
     min-width: 100vw;
-  }
+  }*/
   #wrapper-navbar .overlay .navbar-nav .dropdown-menu {
     position: relative !important;
     transform: none !important;
@@ -305,6 +334,100 @@ h3 {
 
 .elementor-element.e-con-full.e-flex {
     padding-top: 0;
+}
+
+/* -- Contact form -- */
+
+.wpcf7 {
+  max-width: 100%;
+}
+
+.wpcf7 label {
+  font-size: 21px;
+  font-weight: 400;
+  color: var(--bs-gold);
+  text-transform: uppercase;
+}
+
+.wpcf7 textarea {
+  height: 0px;
+}
+
+.wpcf7-spinner {
+  display: none;
+}
+
+.wpcf7-submit,
+.wpcf7 input[type=submit] {
+  font-size: 20px;
+  font-weight: 600;
+  text-transform: uppercase;
+  color: #C9A15B;
+  width: auto;
+  text-align: center;
+  border-radius: 0px;
+  border: 1px solid var(--bs-gold);
+  padding: 0.5rem 4rem;
+  margin: 3rem 0;
+}
+
+.wpcf7-submit:hover,
+.wpcf7 input[type=submit]:hover,
+.wpcf7-submit:focus-visible,
+.wpcf7 input[type=submit]:focus-visible {
+  background: var(--bs-gold);
+  color: var(--bs-white);
+  border: 1px solid var(--bs-gold);
+  box-shadow: none;
+}
+
+.wpcf7-submit:focus,
+.wpcf7 input[type=submit]:focus {
+  color: var(--bs-gold);
+  border: 1px solid var(--bs-gold);
+  box-shadow: none;
+}
+
+.wpcf7 input[type=email],
+.wpcf7 input[type=text],
+.wpcf7 textarea {
+  border: 0px;
+  border-radius: 0px;
+  border-bottom: 1px solid var(--bs-gold);
+  transition: all 0.3 ease-in;
+}
+
+.wpcf7 input[type=email]:focus,
+.wpcf7 input[type=text]:focus,
+.wpcf7 textarea:focus:focus {
+  border-bottom: 1px solid var(--bs-blue);
+  transition: all 0.3 ease-in-out;
+  box-shadow: none;
+}
+
+.wpcf7 input[type=email]:focus-visible,
+.wpcf7 input[type=text]:focus-visible,
+.wpcf7 textarea:focus:focus-visible {
+  outline: none;
+}
+
+.elementor-widget.elementor-widget-shortcode {
+  max-width: 100%;
+}
+
+.elementor-element .gold-background {
+  padding: 0.5rem 4rem;
+}
+
+.elementor-element .gold-background li,
+.elementor-element .gold-background li a {
+  font-size: 15px;
+  font-weight: 600;
+  color: var(--bs-white);
+}
+
+.elementor-element .gold-background li a {
+  text-decoration: underline;
 }
 
 /* -- Footer -- */
@@ -418,3 +541,57 @@ footer .blue-background .site-info p {
     line-height: 80px;
     margin-bottom: 0;
 }
+
+@media (min-width: 576px) {
+  .elementor-element.e-parent.e-lazyloaded {
+    --content-width: 540px !important;
+  }
+}
+
+@media (max-width: 767px) {
+  .button-block a img {
+    height: 32px;
+    width: auto;
+  }
+  .elementor-element.e-parent.e-lazyloaded {
+    --content-width: 100%;
+  }
+}
+
+@media (min-width: 768px) {
+  .text-right-md {
+    text-align: right;
+  }
+  .elementor-element.e-parent.e-lazyloaded {
+    --content-width: 720px !important;
+  }
+}
+
+@media (min-width: 992px) {
+  .elementor-element.e-parent.e-lazyloaded {
+    --content-width: 960px !important;
+  }
+}
+
+@media (min-width: 1200px) {
+  .elementor-element.e-parent.e-lazyloaded {
+    --content-width: 1140px !important;
+  }
+}
+
+@media (min-width: 1400px) {
+  .elementor-element.e-parent.e-lazyloaded {
+    --content-width: 1320px !important;
+  }
+  .elementor-element .gold-background li,
+  .elementor-element .gold-background li a {
+    font-size: 17px;
+    font-weight: 600;
+    color: var(--bs-white);
+  }
+}
+
+
+
+
+
